对屏幕的像素值与屏幕的分辨率的关系还是不懂

--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
     <title>vue</title>
     <script src="node_modules/vue/dist/vue.js"></script>
     <script src="test.js"></script>
+    <style>
+        body{
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 </head>
 <body>
     <div id="app">
         {{message}}
         <h2>{{message}}</h2>
         <h3>{{message}}</h3>
+        <div style="width:1509px;height:400px;background:rebeccapurple;display: inline-block;padding-left: 40px;">
+            <h5>{{message}}</h5>
+        </div>
     </div>
     <script>
         var vm = new Vue({
@@ -23,6 +32,7 @@
                 console.log(window.navigator.userAgent);
                 // getPostition();
                 getScreenInfo();
+                getScreenInfo2();
             },
         })
         // 获取地理位置的navigator.geolocation
@@ -43,8 +53,47 @@
             var screen = window.screen;
             console.log('你的屏幕信息：');
             console.log(screen);
+            console.log('document.body.clientWidth = ' + document.body.clientWidth);
+            console.log('document.body.clientHeight = ' + document.body.clientHeight);
         }
-        
+        function getScreenInfo2() 
+        { 
+            var s = "";
+            s = " 网页可见区域宽：" + document.body.clientWidth; 
+            console.log(s);
+            s = " 网页可见区域高：" + document.body.clientHeight; 
+            console.log(s);
+            s = " 网页可见区域宽：" + document.body.offsetWidth ;  //(包括边线和滚动条的宽)"; 
+            console.log(s);
+            s = " 网页可见区域高：" + document.body.offsetHeight ; //" (包括边线的宽)"; 
+            console.log(s);
+            s = " 网页正文全文宽：" + document.body.scrollWidth; 
+            console.log(s);
+            s = " 网页正文全文高：" + document.body.scrollHeight; 
+            console.log(s);
+            s = " 网页被卷去的高(ff)" +  document.body.scrollTop; 
+            console.log(s);
+            s = " 网页被卷去的高(ie)" + document.documentElement.scrollTop;
+            console.log(s); 
+            s = " 网页被卷去的左：" +  document.body.scrollLeft; 
+            console.log(s);
+            s = " 网页正文部分上：" + window.screenTop; 
+            console.log(s);
+            s = " 网页正文部分左：" + window.screenLeft; 
+            console.log(s);
+            s = " 屏幕分辨率的高：" +  window.screen.height; 
+            console.log(s);
+            s = " 屏幕分辨率的宽：" + window.screen.width; 
+            console.log(s);
+            s = " 屏幕可用工作区高度：" + window.screen.availHeight; 
+            console.log(s);
+            s = " 屏幕可用工作区宽度：" + window.screen.availWidth;
+            console.log(s);
+            s = " 你的屏幕设置是 "  + window.screen.colorDepth ; //位彩色"; 
+            console.log(s);
+            s = " 你的屏幕设置 "  + window.screen.deviceXDPI ; //像素/英寸"; 
+            console.log(s);
+        } 
     </script>
 </body>
 </html>
